--- a/src/MauiTemplatesCLI/MauiAppCS/MauiApp.1.csproj
+++ b/src/MauiTemplatesCLI/MauiAppCS/MauiApp.1.csproj
@@ -96,18 +96,23 @@
 
         <!-- Project Options -->
         <Nullable>enable</Nullable>
+        <!--#if (Net10OrLater)-->
+        <LangVersion>preview</LangVersion>
+        <!--#else-->
         <LangVersion>latest</LangVersion>
+        <!--#endif-->
         <!--#if (!Mvu)-->
         <ImplicitUsings>enable</ImplicitUsings>
         <!--#endif-->
         <RootNamespace>MauiApp._1</RootNamespace>
         <!--#if (Unpackaged)-->
         <WindowsPackageType>None</WindowsPackageType>
+        <!-- <EnablePreviewFeatures>true</EnablePreviewFeatures> -->
         <!--#endif-->
         <!--#if ((AllPlatforms || IsWindows) && AddMvvmToolkit)-->
         <!--<WindowsSdkPackageVersion>10.0.19041.38</WindowsSdkPackageVersion>-->
         <!--#endif-->
-        <!--#if (Net10)-->
+        <!--#if (Net10OrLater)-->
         <RoslynCompilerType>FrameworkPackage</RoslynCompilerType>
         <!--#endif-->
 
@@ -383,7 +388,7 @@
         <ProjectReference Include="..\SAFE-NAME.RazorLib\SAFE-NAME.RazorLib.csproj" />
     </ItemGroup>
     <!--#endif-->
-    <!--#if ((Xaml || Hybrid || Markup) && MauiLib)-->
+    <!--#if ((Xaml || Hybrid || JSHybrid || Markup) && MauiLib)-->
 
     <ItemGroup>
         <ProjectReference Include="..\SAFE-NAME.MauiLib\SAFE-NAME.MauiLib.csproj" />
