--- a/src/MauiTemplatesCLI/SharedClassLib/Directory.Packages.props
+++ b/src/MauiTemplatesCLI/SharedClassLib/Directory.Packages.props
@@ -4,15 +4,15 @@
         <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
         <!--#if (Net10)-->
         <!--#if (Nightly)-->
-        <MauiVersion>10.0.0-preview.7.25406.3</MauiVersion>
+        <MauiVersion>10.0.0-rc.1.25452.6</MauiVersion>
         <!--#else-->
-        <MauiVersion>10.0.0-preview.7.25406.3</MauiVersion>
+        <MauiVersion>10.0.0-rc.1.25452.6</MauiVersion>
         <!--#endif-->
         <!--#elif (Net9)-->
         <!--#if (Nightly)-->
-        <MauiVersion>9.0.110-ci.main.25412.14</MauiVersion>
+        <MauiVersion>9.0.120-ci.main.25459.5</MauiVersion>
         <!--#else-->
-        <MauiVersion>9.0.100</MauiVersion>
+        <MauiVersion>9.0.110</MauiVersion>
         <!--#endif-->
         <!--#elif (Net8)-->
         <!--#if (Nightly)-->
