--- a/src/MauiTemplatesCLI/MauiAppCS/MauiApp.1.MauiLib/MauiApp.1.MauiLib.csproj
+++ b/src/MauiTemplatesCLI/MauiAppCS/MauiApp.1.MauiLib/MauiApp.1.MauiLib.csproj
@@ -13,6 +13,9 @@
         <!--#if (Hybrid)-->
         <EnableDefaultCssItems>false</EnableDefaultCssItems>
         <!--#endif-->
+        <!--#if (Net10OrLater)-->
+        <!-- <DefineConstants>$(DefineConstants);MauiAllowImplicitXmlnsDeclaration</DefineConstants> -->
+        <!--#endif-->
 
         <!-- Project Options -->
         <Nullable>enable</Nullable>
