--- a/src/MauiTemplatesCLI/MauiAppCS/Directory.Packages.props
+++ b/src/MauiTemplatesCLI/MauiAppCS/Directory.Packages.props
@@ -48,6 +48,16 @@
     <!--#if (PackageRef)-->
     <ItemGroup>
     <!--#endif-->
+        <!--#if (AddAspire)-->
+        <PackageVersion Include="Aspire.Hosting.AppHost" Version="9.5.2" />
+        <PackageVersion Include="Microsoft.Maui.Core" Version="$(MauiVersion)" />
+        <PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="9.10.0" />
+        <PackageVersion Include="Microsoft.Extensions.ServiceDiscovery" Version="9.5.2" />
+        <PackageVersion Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.13.1" />
+        <PackageVersion Include="OpenTelemetry.Extensions.Hosting" Version="1.13.1" />
+        <PackageVersion Include="OpenTelemetry.Instrumentation.Http" Version="1.13.0" />
+        <PackageVersion Include="OpenTelemetry.Instrumentation.Runtime" Version="1.13.0" />
+        <!--#endif-->
         <!--#if (Hybrid && RazorLib)-->
         <!--#if (Net10)-->
         <!--#if (Nightly)-->
