Integrating earlier versions of .NET MAUI with Aspire #345

--- a/src/MauiTemplatesCLI/MauiAppCS/MauiApp.1.Aspire/MauiApp.1.Aspire.csproj
+++ b/src/MauiTemplatesCLI/MauiAppCS/MauiApp.1.Aspire/MauiApp.1.Aspire.csproj
@@ -3,7 +3,7 @@
     <Sdk Name="Aspire.AppHost.Sdk" Version="9.5.2" />
 
     <PropertyGroup>
-        <TargetFramework>net10.0</TargetFramework>
+        <TargetFramework>MAUI_TFM</TargetFramework>
         <OutputType>Exe</OutputType>
         <!-- Until .NET MAUI is officially supported. -->
         <NoWarn>$(NoWarn);ASPIRE004</NoWarn>
