--- a/src/MauiTemplatesCLI/MauiAppFS/Directory.Packages.props
+++ b/src/MauiTemplatesCLI/MauiAppFS/Directory.Packages.props
@@ -4,22 +4,14 @@
         <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
         <!--#if (Net10)-->
         <!--#if (Nightly)-->
-        <MauiVersion>10.0.0-rc.2.25504.7</MauiVersion>
+        <MauiVersion>10.0.20-ci.net10.25563.5</MauiVersion>
         <!--#else-->
-        <MauiVersion>10.0.0-rc.2.25504.7</MauiVersion>
+        <MauiVersion>10.0.10</MauiVersion>
         <!--#endif-->
         <!--#elif (Net9)-->
-        <!--#if (Nightly)-->
-        <MauiVersion>9.0.120-ci.main.25514.9</MauiVersion>
-        <!--#else-->
         <MauiVersion>9.0.120</MauiVersion>
-        <!--#endif-->
         <!--#elif (Net8)-->
-        <!--#if (Nightly)-->
         <MauiVersion>8.0.100</MauiVersion>
-        <!--#else-->
-        <MauiVersion>8.0.100</MauiVersion>
-        <!--#endif-->
         <!--#endif-->
         <!--#else-->
         <ManagePackageVersionsCentrally>false</ManagePackageVersionsCentrally>
@@ -27,7 +19,7 @@
         <!--#if (Nightly)-->
         <MauiVersion>10.*-*</MauiVersion>
         <!--#else-->
-        <MauiVersion>10.*-*</MauiVersion>
+        <MauiVersion>10.*</MauiVersion>
         <!--#endif-->
         <!--#elif (Net9)-->
         <!--#if (Nightly)-->
@@ -53,33 +45,24 @@
         <!--#endif-->
         <!--#if (Hybrid)-->
         <!--#if (Net10)-->
-        <!--#if (Nightly)-->
-        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="10.0.0-rc.2.25502.107" />
-        <!--#else-->
-        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="10.0.0-rc.2.25502.107" />
-        <!--#endif-->
+        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="10.0.0" />
         <!--#elif (Net8)-->
-        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="8.0.21" />
+        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="8.0.22" />
         <!--#else-->
-        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="9.0.10" />
+        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="9.0.11" />
         <!--#endif-->
         <!--#endif-->
-        <PackageVersion Include="Fabulous" Version="2.4.2" />
+        <PackageVersion Include="Fabulous" Version="2.4.1" />
         <PackageVersion Include="Fabulous.MauiControls" Version="8.0.5" />
         <!--#if (Hybrid)-->
         <PackageVersion Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="$(MauiVersion)" />
         <!--#endif-->
-        <!--#if (Net9OrLater)-->
-        <PackageVersion Include="FSharp.Core" Version="9.0.201" />
         <!--#if (Net10)-->
-        <!--#if (Nightly)-->
-        <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="10.0.0-rc.2.25502.107" Condition="'$(Configuration)' == 'Debug'" />
-        <!--#else-->
-        <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="10.0.0-rc.2.25502.107" Condition="'$(Configuration)' == 'Debug'" />
-        <!--#endif-->
-        <!--#else-->
-        <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="9.0.10" Condition="'$(Configuration)' == 'Debug'" />
-        <!--#endif-->
+        <PackageVersion Include="FSharp.Core" Version="10.0.100" />
+        <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="10.0.0" Condition="'$(Configuration)' == 'Debug'" />
+        <!--#elif (Net9)-->
+        <PackageVersion Include="FSharp.Core" Version="9.0.303" />
+        <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="9.0.11" Condition="'$(Configuration)' == 'Debug'" />
         <!--#else-->
         <PackageVersion Include="FSharp.Core" Version="8.0.403" />
         <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="8.0.1" Condition="'$(Configuration)' == 'Debug'" />
@@ -89,7 +72,9 @@
         <PackageVersion Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
         <!--#endif-->
         <!--#if (AddToolkit)-->
-        <!--#if (Net9OrLater)-->
+        <!--#if (Net10OrLater)-->
+        <PackageVersion Include="CommunityToolkit.Maui" Version="13.0.0" />
+        <!--#elif (Net9)-->
         <PackageVersion Include="CommunityToolkit.Maui" Version="12.3.0" />
         <!--#else-->
         <PackageVersion Include="CommunityToolkit.Maui" Version="9.1.1" />
@@ -99,14 +84,18 @@
         <PackageVersion Include="Syncfusion.Maui.Toolkit" Version="1.0.7" />
         <!--#endif-->
         <!--#if (AddMarkup)-->
-        <!--#if (Net9OrLater)-->
+        <!--#if (Net10OrLater)-->
+        <PackageVersion Include="CommunityToolkit.Maui.Markup" Version="7.0.0" />
+        <!--#elif (Net9)-->
         <PackageVersion Include="CommunityToolkit.Maui.Markup" Version="6.0.1" />
         <!--#else-->
         <PackageVersion Include="CommunityToolkit.Maui.Markup" Version="4.2.0" />
         <!--#endif-->
         <!--#endif-->
         <!--#if (AddSharedToolkit)-->
-        <!--#if (Net9OrLater)-->
+        <!--#if (Net10OrLater)-->
+        <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="4.1.0" />
+        <!--#elif (Net9)-->
         <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="4.1.0" />
         <!--#else-->
         <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="3.6.0" />
