--- a/src/MauiTemplatesCLI/MauiClassLib/Directory.Packages.props
+++ b/src/MauiTemplatesCLI/MauiClassLib/Directory.Packages.props
@@ -4,22 +4,14 @@
         <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
         <!--#if (Net10)-->
         <!--#if (Nightly)-->
-        <MauiVersion>10.0.0-rc.2.25504.7</MauiVersion>
+        <MauiVersion>10.0.20-ci.net10.25563.5</MauiVersion>
         <!--#else-->
-        <MauiVersion>10.0.0-rc.2.25504.7</MauiVersion>
+        <MauiVersion>10.0.10</MauiVersion>
         <!--#endif-->
         <!--#elif (Net9)-->
-        <!--#if (Nightly)-->
-        <MauiVersion>9.0.120-ci.main.25514.9</MauiVersion>
-        <!--#else-->
         <MauiVersion>9.0.120</MauiVersion>
-        <!--#endif-->
         <!--#elif (Net8)-->
-        <!--#if (Nightly)-->
         <MauiVersion>8.0.100</MauiVersion>
-        <!--#else-->
-        <MauiVersion>8.0.100</MauiVersion>
-        <!--#endif-->
         <!--#endif-->
         <!--#else-->
         <ManagePackageVersionsCentrally>false</ManagePackageVersionsCentrally>
@@ -27,7 +19,7 @@
         <!--#if (Nightly)-->
         <MauiVersion>10.*-*</MauiVersion>
         <!--#else-->
-        <MauiVersion>10.*-*</MauiVersion>
+        <MauiVersion>10.*</MauiVersion>
         <!--#endif-->
         <!--#elif (Net9)-->
         <!--#if (Nightly)-->
@@ -61,7 +53,9 @@
         <PackageVersion Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
         <!--#endif-->
         <!--#if (AddToolkit)-->
-        <!--#if (Net9OrLater)-->
+        <!--#if (Net10OrLater)-->
+        <PackageVersion Include="CommunityToolkit.Maui" Version="13.0.0" />
+        <!--#elif (Net9)-->
         <PackageVersion Include="CommunityToolkit.Maui" Version="12.3.0" />
         <!--#else-->
         <PackageVersion Include="CommunityToolkit.Maui" Version="9.1.1" />
@@ -71,21 +65,27 @@
         <PackageVersion Include="Syncfusion.Maui.Toolkit" Version="1.0.7" />
         <!--#endif-->
         <!--#if (AddMarkup)-->
-        <!--#if (Net9OrLater)-->
+        <!--#if (Net10OrLater)-->
+        <PackageVersion Include="CommunityToolkit.Maui.Markup" Version="7.0.0" />
+        <!--#elif (Net9)-->
         <PackageVersion Include="CommunityToolkit.Maui.Markup" Version="6.0.1" />
         <!--#else-->
         <PackageVersion Include="CommunityToolkit.Maui.Markup" Version="4.2.0" />
         <!--#endif-->
         <!--#endif-->
         <!--#if (AddCamera)-->
-        <!--#if (Net9OrLater)-->
-        <PackageVersion Include="CommunityToolkit.Maui.Camera" Version="3.0.2" />
+        <!--#if (Net10OrLater)-->
+        <PackageVersion Include="CommunityToolkit.Maui.Camera" Version="5.0.0" />
+        <!--#elif (Net9)-->
+        <PackageVersion Include="CommunityToolkit.Maui.Camera" Version="4.0.0" />
         <!--#else-->
         <PackageVersion Include="CommunityToolkit.Maui.Camera" Version="1.0.5" />
         <!--#endif-->
         <!--#endif-->
         <!--#if (AddMedia)-->
-        <!--#if (Net9OrLater)-->
+        <!--#if (Net10OrLater)-->
+        <PackageVersion Include="CommunityToolkit.Maui.MediaElement" Version="7.0.0" />
+        <!--#elif (Net9)-->
         <PackageVersion Include="CommunityToolkit.Maui.MediaElement" Version="6.1.3" />
         <!--#else-->
         <PackageVersion Include="CommunityToolkit.Maui.MediaElement" Version="4.1.2" />
@@ -94,7 +94,9 @@
         <!--#if (AddMaps)-->
         <PackageVersion Include="Microsoft.Maui.Controls.Maps" Version="$(MauiVersion)" />
         <!--#if (AllPlatforms || IsWindows)-->
-        <!--#if (Net9OrLater)-->
+        <!--#if (Net10OrLater)-->
+        <PackageVersion Include="CommunityToolkit.Maui.Maps" Version="4.0.0" />
+        <!--#elif (Net9)-->
         <PackageVersion Include="CommunityToolkit.Maui.Maps" Version="3.0.3" />
         <!--#else-->
         <PackageVersion Include="CommunityToolkit.Maui.Maps" Version="2.0.4" />
@@ -105,7 +107,9 @@
         <PackageVersion Include="Microsoft.Maui.Controls.Foldable" Version="$(MauiVersion)" />
         <!--#endif-->
         <!--#if (AddSharedToolkit)-->
-        <!--#if (Net9OrLater)-->
+        <!--#if (Net10OrLater)-->
+        <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="4.1.0" />
+        <!--#elif (Net9)-->
         <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="4.1.0" />
         <!--#else-->
         <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="3.6.0" />
