--- a/src/MauiTemplatesCLI/MauiAppCS/Directory.Packages.props
+++ b/src/MauiTemplatesCLI/MauiAppCS/Directory.Packages.props
@@ -2,32 +2,30 @@
     <PropertyGroup>
         <!--#if (CentralPkgMgmt)-->
         <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
+        <!--#if (AddAspire)-->
+        <AspireVersion>13.0.0</AspireVersion>
+        <!--#endif-->
         <!--#if (Net10)-->
         <!--#if (Nightly)-->
-        <MauiVersion>10.0.0-rc.2.25504.7</MauiVersion>
+        <MauiVersion>10.0.20-ci.net10.25563.5</MauiVersion>
         <!--#else-->
-        <MauiVersion>10.0.0-rc.2.25504.7</MauiVersion>
+        <MauiVersion>10.0.10</MauiVersion>
         <!--#endif-->
         <!--#elif (Net9)-->
-        <!--#if (Nightly)-->
-        <MauiVersion>9.0.120-ci.main.25514.9</MauiVersion>
-        <!--#else-->
         <MauiVersion>9.0.120</MauiVersion>
-        <!--#endif-->
         <!--#elif (Net8)-->
-        <!--#if (Nightly)-->
         <MauiVersion>8.0.100</MauiVersion>
-        <!--#else-->
-        <MauiVersion>8.0.100</MauiVersion>
-        <!--#endif-->
         <!--#endif-->
         <!--#else-->
         <ManagePackageVersionsCentrally>false</ManagePackageVersionsCentrally>
+        <!--#if (AddAspire)-->
+        <AspireVersion>13.0.0</AspireVersion>
+        <!--#endif-->
         <!--#if (Net10)-->
         <!--#if (Nightly)-->
         <MauiVersion>10.*-*</MauiVersion>
         <!--#else-->
-        <MauiVersion>10.*-*</MauiVersion>
+        <MauiVersion>10.*</MauiVersion>
         <!--#endif-->
         <!--#elif (Net9)-->
         <!--#if (Nightly)-->
@@ -49,30 +47,28 @@
     <ItemGroup>
     <!--#endif-->
         <!--#if (AddAspire)-->
-        <PackageVersion Include="Aspire.Hosting.AppHost" Version="9.5.2" />
+        <PackageVersion Include="Aspire.Hosting.AppHost" Version="$(AspireVersion)" />
         <PackageVersion Include="Microsoft.Maui.Core" Version="$(MauiVersion)" />
-        <PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="9.10.0" />
-        <PackageVersion Include="Microsoft.Extensions.ServiceDiscovery" Version="9.5.2" />
-        <PackageVersion Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.13.1" />
-        <PackageVersion Include="OpenTelemetry.Extensions.Hosting" Version="1.13.1" />
-        <PackageVersion Include="OpenTelemetry.Instrumentation.Http" Version="1.13.0" />
-        <PackageVersion Include="OpenTelemetry.Instrumentation.Runtime" Version="1.13.0" />
+        <PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="10.0.0" />
+        <PackageVersion Include="Microsoft.Extensions.ServiceDiscovery" Version="10.0.0" />
+        <PackageVersion Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.14.0" />
+        <PackageVersion Include="OpenTelemetry.Extensions.Hosting" Version="1.14.0" />
+        <PackageVersion Include="OpenTelemetry.Instrumentation.Http" Version="1.14.0" />
+        <PackageVersion Include="OpenTelemetry.Instrumentation.Runtime" Version="1.14.0" />
         <!--#endif-->
         <!--#if (Hybrid && RazorLib)-->
         <!--#if (Net10)-->
-        <!--#if (Nightly)-->
-        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="10.0.0-rc.2.25502.107" />
-        <!--#else-->
-        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="10.0.0-rc.2.25502.107" />
-        <!--#endif-->
+        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="10.0.0" />
         <!--#elif (Net8)-->
-        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="8.0.21" />
+        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="8.0.22" />
         <!--#else-->
-        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="9.0.10" />
+        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="9.0.11" />
         <!--#endif-->
         <!--#endif-->
         <!--#if (Razor)-->
-        <!--#if (Net9OrLater)-->
+        <!--#if (Net10OrLater)-->
+        <PackageVersion Include="BlazorBindings.Maui" Version="4.0.15" />
+        <!--#elif (Net9)-->
         <PackageVersion Include="BlazorBindings.Maui" Version="3.0.6" />
         <!--#else-->
         <PackageVersion Include="BlazorBindings.Maui" Version="2.0.34" />
@@ -84,7 +80,9 @@
         <!--#if (AddMaps)-->
         <PackageVersion Include="Microsoft.Maui.Controls.Maps" Version="$(MauiVersion)" />
         <!--#if (AllPlatforms || IsWindows)-->
-        <!--#if (Net9OrLater)-->
+        <!--#if (Net10OrLater)-->
+        <PackageVersion Include="CommunityToolkit.Maui.Maps" Version="4.0.0" />
+        <!--#elif (Net9)-->
         <PackageVersion Include="CommunityToolkit.Maui.Maps" Version="3.0.3" />
         <!--#else-->
         <PackageVersion Include="CommunityToolkit.Maui.Maps" Version="2.0.4" />
@@ -95,27 +93,27 @@
         <PackageVersion Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="$(MauiVersion)" />
         <!--#endif-->
         <!--#if (Net10)-->
-        <!--#if (Nightly)-->
-        <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="10.0.0-rc.2.25502.107" Condition="'$(Configuration)' == 'Debug'" />
-        <!--#else-->
-        <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="10.0.0-rc.2.25502.107" Condition="'$(Configuration)' == 'Debug'" />
-        <!--#endif-->
+        <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="10.0.0" Condition="'$(Configuration)' == 'Debug'" />
         <!--#elif (Net8)-->
         <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="8.0.1" Condition="'$(Configuration)' == 'Debug'" />
         <!--#else-->
-        <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="9.0.10" Condition="'$(Configuration)' == 'Debug'" />
+        <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="9.0.11" Condition="'$(Configuration)' == 'Debug'" />
         <!--#endif-->
         <PackageVersion Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
         <!--#if (Net8)-->
         <PackageVersion Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
         <!--#endif-->
-        <!--#if (Net9OrLater)-->
+        <!--#if (Net10OrLater)-->
+        <PackageVersion Include="VijayAnand.MauiToolkit" Version="4.2.0" />
+        <!--#elif (Net9)-->
         <PackageVersion Include="VijayAnand.MauiToolkit" Version="4.2.0" />
         <!--#else-->
         <PackageVersion Include="VijayAnand.MauiToolkit" Version="3.4.0" />
         <!--#endif-->
         <!--#if (AddToolkit)-->
-        <!--#if (Net9OrLater)-->
+        <!--#if (Net10OrLater)-->
+        <PackageVersion Include="CommunityToolkit.Maui" Version="13.0.0" />
+        <!--#elif (Net9)-->
         <PackageVersion Include="CommunityToolkit.Maui" Version="12.3.0" />
         <!--#else-->
         <PackageVersion Include="CommunityToolkit.Maui" Version="9.1.1" />
@@ -125,28 +123,36 @@
         <PackageVersion Include="Syncfusion.Maui.Toolkit" Version="1.0.7" />
         <!--#endif-->
         <!--#if (AddMarkup)-->
-        <!--#if (Net9OrLater)-->
+        <!--#if (Net10OrLater)-->
+        <PackageVersion Include="CommunityToolkit.Maui.Markup" Version="7.0.0" />
+        <!--#elif (Net9)-->
         <PackageVersion Include="CommunityToolkit.Maui.Markup" Version="6.0.1" />
         <!--#else-->
         <PackageVersion Include="CommunityToolkit.Maui.Markup" Version="4.2.0" />
         <!--#endif-->
         <!--#endif-->
         <!--#if (AddCamera)-->
-        <!--#if (Net9OrLater)-->
-        <PackageVersion Include="CommunityToolkit.Maui.Camera" Version="3.0.2" />
+        <!--#if (Net10OrLater)-->
+        <PackageVersion Include="CommunityToolkit.Maui.Camera" Version="5.0.0" />
+        <!--#elif (Net9)-->
+        <PackageVersion Include="CommunityToolkit.Maui.Camera" Version="4.0.0" />
         <!--#else-->
         <PackageVersion Include="CommunityToolkit.Maui.Camera" Version="1.0.5" />
         <!--#endif-->
         <!--#endif-->
         <!--#if (AddMedia)-->
-        <!--#if (Net9OrLater)-->
+        <!--#if (Net10OrLater)-->
+        <PackageVersion Include="CommunityToolkit.Maui.MediaElement" Version="7.0.0" />
+        <!--#elif (Net9)-->
         <PackageVersion Include="CommunityToolkit.Maui.MediaElement" Version="6.1.3" />
         <!--#else-->
         <PackageVersion Include="CommunityToolkit.Maui.MediaElement" Version="4.1.2" />
         <!--#endif-->
         <!--#endif-->
         <!--#if (AddSharedToolkit)-->
-        <!--#if (Net9OrLater)-->
+        <!--#if (Net10OrLater)-->
+        <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="4.1.0" />
+        <!--#elif (Net9)-->
         <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="4.1.0" />
         <!--#else-->
         <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="3.6.0" />
@@ -159,11 +165,17 @@
         <PackageVersion Include="CompiledBindings.MAUI" Version="1.0.18" />
         <!--#endif-->
         <!--#if (Reactor)-->
-        <!--#if (Net9OrLater)-->
-        <PackageVersion Include="Reactor.Maui" Version="3.0.37" />
-        <PackageVersion Include="Reactor.Maui.Canvas" Version="3.0.37" />
+        <!--#if (Net10OrLater)-->
+        <PackageVersion Include="Reactor.Maui" Version="3.0.38" />
+        <PackageVersion Include="Reactor.Maui.Canvas" Version="3.0.38" />
         <!--#if (AddMaps)-->
-        <PackageVersion Include="Reactor.Maui.Maps" Version="3.0.37" />
+        <PackageVersion Include="Reactor.Maui.Maps" Version="3.0.38" />
+        <!--#endif-->
+        <!--#elif (Net9)-->
+        <PackageVersion Include="Reactor.Maui" Version="3.0.38" />
+        <PackageVersion Include="Reactor.Maui.Canvas" Version="3.0.38" />
+        <!--#if (AddMaps)-->
+        <PackageVersion Include="Reactor.Maui.Maps" Version="3.0.38" />
         <!--#endif-->
         <!--#else-->
         <PackageVersion Include="Reactor.Maui" Version="2.0.59" />
