--- a/src/MauiTemplatesCLI/MauiAppCS/MauiApp.1.Aspire/MauiApp.1.Aspire.csproj
+++ b/src/MauiTemplatesCLI/MauiAppCS/MauiApp.1.Aspire/MauiApp.1.Aspire.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-    <Sdk Name="Aspire.AppHost.Sdk" Version="9.5.2" />
+    <Sdk Name="Aspire.AppHost.Sdk" Version="$(AspireVersion)" />
 
     <PropertyGroup>
         <TargetFramework>MAUI_TFM</TargetFramework>
@@ -23,7 +23,7 @@
         <!--#if (CentralPkgMgmt)-->
         <PackageReference Include="Aspire.Hosting.AppHost" />
         <!--#else-->
-        <PackageReference Include="Aspire.Hosting.AppHost" Version="9.5.2" />
+        <PackageReference Include="Aspire.Hosting.AppHost" Version="$(AspireVersion)" />
         <!--#endif-->
     </ItemGroup>
   
