--- a/src/MauiTemplatesCLI/MauiAppCS/MauiApp.1.csproj
+++ b/src/MauiTemplatesCLI/MauiAppCS/MauiApp.1.csproj
@@ -277,7 +277,9 @@
         <!--#endif-->
         <!--#else-->
         <!--#if (Razor)-->
-        <!--#if (Net9OrLater)-->
+        <!--#if (Net10OrLater)-->
+        <PackageReference Include="BlazorBindings.Maui" Version="4.*" />
+        <!--#elif (Net9)-->
         <PackageReference Include="BlazorBindings.Maui" Version="3.*" />
         <!--#else-->
         <PackageReference Include="BlazorBindings.Maui" Version="2.*" />
@@ -289,7 +291,9 @@
         <!--#if (AddMaps)-->
         <PackageReference Include="Microsoft.Maui.Controls.Maps" Version="$(MauiVersion)" />
         <!--#if (AllPlatforms || IsWindows)-->
-        <!--#if (Net9OrLater)-->
+        <!--#if (Net10OrLater)-->
+        <PackageReference Include="CommunityToolkit.Maui.Maps" Version="4.*" />
+        <!--#elif (Net9)-->
         <PackageReference Include="CommunityToolkit.Maui.Maps" Version="3.*" />
         <!--#else-->
         <PackageReference Include="CommunityToolkit.Maui.Maps" Version="2.*" />
@@ -300,7 +304,7 @@
         <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="$(MauiVersion)" />
         <!--#endif-->
         <!--#if (Net10)-->
-        <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="10.*-*" Condition="'$(Configuration)' == 'Debug'" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="10.*" Condition="'$(Configuration)' == 'Debug'" />
         <!--#elif (Net9)-->
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.*" Condition="'$(Configuration)' == 'Debug'" />
         <!--#else-->
@@ -310,13 +314,17 @@
         <!--#if (Net8)-->
         <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
         <!--#endif-->
-        <!--#if (Net9OrLater)-->
+        <!--#if (Net10OrLater)-->
+        <PackageReference Include="VijayAnand.MauiToolkit" Version="4.*" />
+        <!--#elif (Net9)-->
         <PackageReference Include="VijayAnand.MauiToolkit" Version="4.*" />
         <!--#else-->
         <PackageReference Include="VijayAnand.MauiToolkit" Version="3.*" />
         <!--#endif-->
         <!--#if (AddToolkit)-->
-        <!--#if (Net9OrLater)-->
+        <!--#if (Net10OrLater)-->
+        <PackageReference Include="CommunityToolkit.Maui" Version="13.*" />
+        <!--#elif (Net9)-->
         <PackageReference Include="CommunityToolkit.Maui" Version="12.*" />
         <!--#else-->
         <PackageReference Include="CommunityToolkit.Maui" Version="9.*" />
@@ -326,28 +334,36 @@
         <PackageReference Include="Syncfusion.Maui.Toolkit" Version="1.*" />
         <!--#endif-->
         <!--#if (AddMarkup)-->
-        <!--#if (Net9OrLater)-->
+        <!--#if (Net10OrLater)-->
+        <PackageReference Include="CommunityToolkit.Maui.Markup" Version="7.*" />
+        <!--#elif (Net9)-->
         <PackageReference Include="CommunityToolkit.Maui.Markup" Version="6.*" />
         <!--#else-->
         <PackageReference Include="CommunityToolkit.Maui.Markup" Version="4.*" />
         <!--#endif-->
         <!--#endif-->
         <!--#if (AddCamera)-->
-        <!--#if (Net9OrLater)-->
-        <PackageReference Include="CommunityToolkit.Maui.Camera" Version="3.*" />
+        <!--#if (Net10OrLater)-->
+        <PackageReference Include="CommunityToolkit.Maui.Camera" Version="5.*" />
+        <!--#elif (Net9)-->
+        <PackageReference Include="CommunityToolkit.Maui.Camera" Version="4.*" />
         <!--#else-->
         <PackageReference Include="CommunityToolkit.Maui.Camera" Version="1.*" />
         <!--#endif-->
         <!--#endif-->
         <!--#if (AddMedia)-->
-        <!--#if (Net9OrLater)-->
+        <!--#if (Net10OrLater)-->
+        <PackageReference Include="CommunityToolkit.Maui.MediaElement" Version="7.*" />
+        <!--#elif (Net9)-->
         <PackageReference Include="CommunityToolkit.Maui.MediaElement" Version="6.*" />
         <!--#else-->
         <PackageReference Include="CommunityToolkit.Maui.MediaElement" Version="4.*" />
         <!--#endif-->
         <!--#endif-->
         <!--#if (AddSharedToolkit)-->
-        <!--#if (Net9OrLater)-->
+        <!--#if (Net10OrLater)-->
+        <PackageReference Include="VijayAnand.Toolkit.Markup" Version="4.*" />
+        <!--#elif (Net9)-->
         <PackageReference Include="VijayAnand.Toolkit.Markup" Version="4.*" />
         <!--#else-->
         <PackageReference Include="VijayAnand.Toolkit.Markup" Version="3.*" />
