--- a/src/MauiTemplatesCLI/MauiClassLib/MauiClassLib.1.csproj
+++ b/src/MauiTemplatesCLI/MauiClassLib/MauiClassLib.1.csproj
@@ -237,7 +237,9 @@
         <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
         <!--#endif-->
         <!--#if (AddToolkit)-->
-        <!--#if (Net9OrLater)-->
+        <!--#if (Net10OrLater)-->
+        <PackageReference Include="CommunityToolkit.Maui" Version="13.*" />
+        <!--#elif (Net9)-->
         <PackageReference Include="CommunityToolkit.Maui" Version="12.*" />
         <!--#else-->
         <PackageReference Include="CommunityToolkit.Maui" Version="9.*" />
@@ -247,21 +249,27 @@
         <PackageReference Include="Syncfusion.Maui.Toolkit" Version="1.*" />
         <!--#endif-->
         <!--#if (AddMarkup)-->
-        <!--#if (Net9OrLater)-->
+        <!--#if (Net10OrLater)-->
+        <PackageReference Include="CommunityToolkit.Maui.Markup" Version="7.*" />
+        <!--#elif (Net9)-->
         <PackageReference Include="CommunityToolkit.Maui.Markup" Version="6.*" />
         <!--#else-->
         <PackageReference Include="CommunityToolkit.Maui.Markup" Version="4.*" />
         <!--#endif-->
         <!--#endif-->
         <!--#if (AddCamera)-->
-        <!--#if (Net9OrLater)-->
-        <PackageReference Include="CommunityToolkit.Maui.Camera" Version="3.*" />
+        <!--#if (Net10OrLater)-->
+        <PackageReference Include="CommunityToolkit.Maui.Camera" Version="5.*" />
+        <!--#elif (Net9)-->
+        <PackageReference Include="CommunityToolkit.Maui.Camera" Version="4.*" />
         <!--#else-->
         <PackageReference Include="CommunityToolkit.Maui.Camera" Version="1.*" />
         <!--#endif-->
         <!--#endif-->
         <!--#if (AddMedia)-->
-        <!--#if (Net9OrLater)-->
+        <!--#if (Net10OrLater)-->
+        <PackageReference Include="CommunityToolkit.Maui.MediaElement" Version="7.*" />
+        <!--#elif (Net9)-->
         <PackageReference Include="CommunityToolkit.Maui.MediaElement" Version="6.*" />
         <!--#else-->
         <PackageReference Include="CommunityToolkit.Maui.MediaElement" Version="4.*" />
@@ -270,7 +278,9 @@
         <!--#if (AddMaps)-->
         <PackageReference Include="Microsoft.Maui.Controls.Maps" Version="$(MauiVersion)" />
         <!--#if (AllPlatforms || IsWindows)-->
-        <!--#if (Net9OrLater)-->
+        <!--#if (Net10OrLater)-->
+        <PackageReference Include="CommunityToolkit.Maui.Maps" Version="4.*" />
+        <!--#elif (Net9)-->
         <PackageReference Include="CommunityToolkit.Maui.Maps" Version="3.*" />
         <!--#else-->
         <PackageReference Include="CommunityToolkit.Maui.Maps" Version="2.*" />
@@ -281,7 +291,9 @@
         <PackageReference Include="Microsoft.Maui.Controls.Foldable" Version="$(MauiVersion)" />
         <!--#endif-->
         <!--#if (AddSharedToolkit)-->
-        <!--#if (Net9OrLater)-->
+        <!--#if (Net10OrLater)-->
+        <PackageReference Include="VijayAnand.Toolkit.Markup" Version="4.*" />
+        <!--#elif (Net9)-->
         <PackageReference Include="VijayAnand.Toolkit.Markup" Version="4.*" />
         <!--#else-->
         <PackageReference Include="VijayAnand.Toolkit.Markup" Version="3.*" />
