--- a/src/MauiTemplatesCLI/SharedClassLib/Directory.Packages.props
+++ b/src/MauiTemplatesCLI/SharedClassLib/Directory.Packages.props
@@ -4,22 +4,14 @@
         <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
         <!--#if (Net10)-->
         <!--#if (Nightly)-->
-        <MauiVersion>10.0.0-rc.2.25504.7</MauiVersion>
+        <MauiVersion>10.0.20-ci.net10.25563.5</MauiVersion>
         <!--#else-->
-        <MauiVersion>10.0.0-rc.2.25504.7</MauiVersion>
+        <MauiVersion>10.0.10</MauiVersion>
         <!--#endif-->
         <!--#elif (Net9)-->
-        <!--#if (Nightly)-->
-        <MauiVersion>9.0.120-ci.main.25514.9</MauiVersion>
-        <!--#else-->
         <MauiVersion>9.0.120</MauiVersion>
-        <!--#endif-->
         <!--#elif (Net8)-->
-        <!--#if (Nightly)-->
         <MauiVersion>8.0.100</MauiVersion>
-        <!--#else-->
-        <MauiVersion>8.0.100</MauiVersion>
-        <!--#endif-->
         <!--#endif-->
         <!--#else-->
         <ManagePackageVersionsCentrally>false</ManagePackageVersionsCentrally>
@@ -27,7 +19,7 @@
         <!--#if (Nightly)-->
         <MauiVersion>10.*-*</MauiVersion>
         <!--#else-->
-        <MauiVersion>10.*-*</MauiVersion>
+        <MauiVersion>10.*</MauiVersion>
         <!--#endif-->
         <!--#elif (Net9)-->
         <!--#if (Nightly)-->
@@ -67,7 +59,9 @@
         <PackageVersion Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
         <!--#endif-->
         <!--#if (AddMauiToolkit)-->
-        <!--#if (Net9OrLater)-->
+        <!--#if (Net10OrLater)-->
+        <PackageVersion Include="CommunityToolkit.Maui" Version="13.0.0" />
+        <!--#elif (Net9)-->
         <PackageVersion Include="CommunityToolkit.Maui" Version="12.3.0" />
         <!--#else-->
         <PackageVersion Include="CommunityToolkit.Maui" Version="9.1.1" />
@@ -77,14 +71,18 @@
         <PackageVersion Include="Syncfusion.Maui.Toolkit" Version="1.0.7" />
         <!--#endif-->
         <!--#if (AddMauiMarkup)-->
-        <!--#if (Net9OrLater)-->
+        <!--#if (Net10OrLater)-->
+        <PackageVersion Include="CommunityToolkit.Maui.Markup" Version="7.0.0" />
+        <!--#elif (Net9)-->
         <PackageVersion Include="CommunityToolkit.Maui.Markup" Version="6.0.1" />
         <!--#else-->
         <PackageVersion Include="CommunityToolkit.Maui.Markup" Version="4.2.0" />
         <!--#endif-->
         <!--#endif-->
         <!--#if (AddSharedToolkit)-->
-        <!--#if (Net9OrLater)-->
+        <!--#if (Net10OrLater)-->
+        <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="4.1.0" />
+        <!--#elif (Net9)-->
         <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="4.1.0" />
         <!--#else-->
         <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="3.6.0" />
